// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerDetailsHeader /> renders using a complete employer record 1`] = `
Array [
  <div
    className="EmployerDetailsHeader__Title EmployerDetailsHeader__Title--noShort"
  >
    <img
      className="EmployerDetailsHeader__Icon"
      src="/images/employers/consoto.svg"
      style={
        Object {
          "background": "#fff",
        }
      }
    />
    <h2>
      <a
        onClick={[Function]}
        title=""
      >
        Contoso
      </a>
      <a
        className="EmployerDetailsHeader__Ticker"
        href="https://finance.yahoo.com/quote/CTS"
        rel="noopener noreferrer"
        target="_blank"
        title="ƭïçƙèř"
      >
        ($
        CTS
        )
      </a>
    </h2>
    [component: EmployerActionLinks employer=([object Object]) /]
    <span
      className="EmployerDetailsHeader__TitleGap"
    />
    <span
      className="EmployerDetailsHeader__Rating EmployerDetailsHeader__Rating--fair"
      title="řáƭïñϱ"
    >
      ƒáïř
      <i
        className="material-icons EmployerDetailsHeader__RatingIcon"
      >
        trending_flat
      </i>
    </span>
  </div>,
  <div
    className="EmployerDetailsHeader__Subtitle"
  >
    <span>
      City, us (Multinational)
    </span>
    <span
      title="áƙá"
    >
      <i
        className="material-icons"
      >
        alternate_email
      </i>
      MyContoso
    </span>
    <span
      title="è₥ƥℓô¥èèƨ"
    >
      <i
        className="material-icons"
      >
        people
      </i>
      12,345 (2015)
    </span>
    <span
      className="EmployerDetailsHeader__AggregateRatings"
      title="řáƭïñϱÇôúñƭƨ"
    >
      <span
        className="EmployerDetailsHeader__GoodRatings"
      >
        <i
          className="material-icons"
        >
          add
        </i>
        1
      </span>
      <span
        className="EmployerDetailsHeader__PoorRatings"
      >
        <i
          className="material-icons"
        >
          remove
        </i>
        1
      </span>
    </span>
  </div>,
]
`;

exports[`<EmployerDetailsHeader /> renders without exploding 1`] = `
Array [
  <div
    className="EmployerDetailsHeader__Title EmployerDetailsHeader__Title--noShort"
  >
    <h2>
      <a
        onClick={[Function]}
        title=""
      >
        
      </a>
    </h2>
    [component: EmployerActionLinks employer=([object Object]) /]
    <span
      className="EmployerDetailsHeader__TitleGap"
    />
    <span
      className="EmployerDetailsHeader__Rating EmployerDetailsHeader__Rating--fair"
      title="řáƭïñϱ"
    >
      ƒáïř
      <i
        className="material-icons EmployerDetailsHeader__RatingIcon"
      >
        trending_flat
      </i>
    </span>
  </div>,
  <div
    className="EmployerDetailsHeader__Subtitle"
  >
    <span
      className="EmployerDetailsHeader__AggregateRatings"
      title="řáƭïñϱÇôúñƭƨ"
    >
      <span
        className="EmployerDetailsHeader__GoodRatings"
      >
        <i
          className="material-icons"
        >
          add
        </i>
        0
      </span>
      <span
        className="EmployerDetailsHeader__PoorRatings"
      >
        <i
          className="material-icons"
        >
          remove
        </i>
        0
      </span>
    </span>
  </div>,
]
`;
